--- a/po/eu.po
+++ b/po/eu.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-07-08 21:16+0000\n"
-"Last-Translator: Asier_Iturralde_Sarasola <asier.iturralde@gmail.com>\n"
+"PO-Revision-Date: 2013-09-06 19:44+0000\n"
+"Last-Translator: Asier <asier.iturralde@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1373318201.0\n"
+"X-POOTLE-MTIME: 1378496665.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -33,9 +33,8 @@ msgid "Shortcut Editor"
 msgstr "Lasterbidea"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "<b>C_ommand line to execute:</b>"
-msgstr "<b>Exekutatu beharreko komando lerroa:</b>"
+msgstr "<b>E_xekutatu beharreko komando lerroa:</b>"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "<b>File Type To be Opened:</b>"
@@ -61,7 +60,6 @@ msgid "<b>_Application name (optional, set it to keep association)</b>"
 msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:10
-#, fuzzy
 msgid "C_ustom Command Line"
 msgstr "Komando lerro _pertsonalizatua"
 
@@ -83,7 +81,7 @@ msgstr "_Instalatutako aplikazioa"
 
 #: ../data/ui/app-chooser.glade.h:15
 msgid "_Keep terminal window open after command execution"
-msgstr ""
+msgstr "_Mantendu terminalaren leihoa irekita komandoa exekutatu ondoren"
 
 #: ../data/ui/app-chooser.glade.h:16
 msgid "_Set selected application as default action of this file type"
@@ -130,26 +128,22 @@ msgid "with the following file?"
 msgstr "ondorengo fitxategiarekin?"
 
 #: ../data/ui/choose-icon.ui.h:1
-#, fuzzy
 msgid "<b>Choose icon from:</b>"
-msgstr "<b>_Aldatu edukia:</b>"
+msgstr "<b>Aukeratu ikonoa hemendik:</b>"
 
 #: ../data/ui/choose-icon.ui.h:2
-#, fuzzy
 msgid "Choose An Icon..."
-msgstr "Aukeratu aplikazio bat"
+msgstr "Aukeratu ikono bat..."
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:4
-#, fuzzy
 msgid "image files"
-msgstr "_Irudi-fitxategiak"
+msgstr "irudi-fitxategiak"
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:6
-#, fuzzy
 msgid "system icon theme"
-msgstr "Sistemaren aplikazioak"
+msgstr "sistemaren ikonoen gaia"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -188,9 +182,8 @@ msgid "<b>Last Modification:</b>"
 msgstr "<b>Azken aldaketa:</b>"
 
 #: ../data/ui/file-prop.glade.h:8
-#, fuzzy
 msgid "<b>Last Permissions Change:</b>"
-msgstr "<b>Azken atzipena:</b>"
+msgstr "<b>Azken baimen aldaketa:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "<b>Location:</b>"
@@ -213,9 +206,8 @@ msgid "<b>Special bits:</b>"
 msgstr "<b>Bit bereziak:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>Target file:</b>"
-msgstr "<b>Helburua:</b>"
+msgstr "<b>Helburuko fitxategia:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
 msgid "<b>Total Size of Files:</b>"
@@ -226,9 +218,8 @@ msgid "<b>_Execute:</b>"
 msgstr "<b>_Exekutatu:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
-#, fuzzy
 msgid "<b>_Name:</b>"
-msgstr "<b>Helburua:</b>"
+msgstr "<b>_Izena:</b>"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "<b>_View content:</b>"
@@ -243,9 +234,8 @@ msgid "File Properties"
 msgstr "Fitxategiaren propietateak"
 
 #: ../data/ui/file-prop.glade.h:21
-#, fuzzy
 msgid "Hidden file"
-msgstr "_Bideo-fitxategiak"
+msgstr "Ezkutuko fitxategia"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Icon of the file in folder view"
@@ -330,9 +320,8 @@ msgid "*"
 msgstr "*"
 
 #: ../data/ui/filesearch.glade.h:3
-#, fuzzy
 msgid "<b>File Contain_s:</b>"
-msgstr "<b>Fitxategiak _hau duelarik</b>"
+msgstr "<b>Fitxategiak _hau duelarik:</b>"
 
 #: ../data/ui/filesearch.glade.h:4
 msgid "<b>File Size</b>"
@@ -343,18 +332,16 @@ msgid "<b>File Type</b>"
 msgstr "<b>Fitxategi-mota</b>"
 
 #: ../data/ui/filesearch.glade.h:6
-#, fuzzy
 msgid "<b>File _Name Patterns:</b>"
-msgstr "<b>Fitxategi-_izen ereduak</b>"
+msgstr "<b>Fitxategi-_izen ereduak:</b>"
 
 #: ../data/ui/filesearch.glade.h:7
 msgid "<b>Last Modified Time</b>"
 msgstr "<b>Azken aldaketa</b>"
 
 #: ../data/ui/filesearch.glade.h:8
-#, fuzzy
 msgid "<b>Plac_es to Search:</b>"
-msgstr "<b>Bilatzeko lekuak</b>"
+msgstr "<b>Bilatzeko lekuak:</b>"
 
 #: ../data/ui/filesearch.glade.h:9
 msgid "Bytes"
@@ -564,7 +551,7 @@ msgstr "Lasterbidea"
 
 #: ../src/base/fm-templates.c:1016
 msgid "fm_template_create_file: invalid argument"
-msgstr ""
+msgstr "fm_template_create_file: argumentu baliogabea"
 
 #: ../src/base/fm-terminal.c:248
 msgid "No terminal emulator is set in libfm config"
@@ -577,7 +564,7 @@ msgstr "Menu-direktorio baliogabea"
 
 #: ../src/base/fm-utils.c:136
 msgid "kB"
-msgstr ""
+msgstr "kB"
 
 #: ../src/base/fm-utils.c:153
 msgid "TB"
@@ -680,15 +667,15 @@ msgstr ""
 
 #: ../src/extra/fm-xml-file.c:834
 msgid "Document ended unexpectedly"
-msgstr ""
+msgstr "Dokumentua ustekabean amaitu da"
 
 #: ../src/extra/fm-xml-file.c:842
 msgid "Document was empty or contained only whitespace"
-msgstr ""
+msgstr "Dokumentua hutsik dago edo zuriuneak bakarrik ditu"
 
 #: ../src/extra/fm-xml-file.c:1258
 msgid "fm_xml_file_to_data: XML data error"
-msgstr ""
+msgstr "fm_xml_file_to_data: XML datu-errorea"
 
 #: ../src/gtk/fm-app-chooser-combo-box.c:216
 msgid "Customize"
@@ -716,25 +703,24 @@ msgstr "Kargatzen..."
 
 #: ../src/gtk/fm-dir-tree-view.c:481
 msgid "Shows tree of directories in sidebar"
-msgstr ""
+msgstr "Direktorioen zuhaitza erakusten du alboko barran"
 
 #: ../src/gtk/fm-dnd-dest.c:411
-#, fuzzy
 msgid "_Cancel"
-msgstr "Ezeztatuta"
+msgstr "_Utzi"
 
 #: ../src/gtk/fm-dnd-dest.c:412
 msgid "C_opy"
-msgstr ""
+msgstr "K_opiatu"
 
 #: ../src/gtk/fm-dnd-dest.c:413
 msgid "_Move"
-msgstr ""
+msgstr "_Lekuz aldatu"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:415
 msgid "_Link"
-msgstr ""
+msgstr "Este_katu"
 
 #: ../src/gtk/fm-dnd-dest.c:861
 msgid "XDirectSave failed."
@@ -757,9 +743,8 @@ msgid "Unh_ide"
 msgstr ""
 
 #: ../src/gtk/fm-file-menu.c:157
-#, fuzzy
 msgid "_Add to Bookmarks"
-msgstr "_Kendu laster-markatik"
+msgstr "_Gehitu laster-markei"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "Co_mpress..."
@@ -778,14 +763,12 @@ msgid "Prop_erties"
 msgstr "_Propietateak"
 
 #: ../src/gtk/fm-file-menu.c:260 ../src/gtk/fm-file-menu.c:512
-#, fuzzy
 msgid "_Trash"
-msgstr "Zakarrontzia"
+msgstr "_Zakarrontzia"
 
 #: ../src/gtk/fm-file-properties.c:364
-#, fuzzy
 msgid "Image files"
-msgstr "_Irudi-fitxategiak"
+msgstr "Irudi-fitxategiak"
 
 #: ../src/gtk/fm-file-properties.c:490 ../src/gtk/fm-file-properties.c:499
 msgid "byte"
@@ -832,9 +815,8 @@ msgid "Files of different types"
 msgstr "Mota desberdinetako fitxategiak"
 
 #: ../src/gtk/fm-file-properties.c:1241
-#, fuzzy
 msgid "<b>File:</b>"
-msgstr "<b>Fitxategi-mota:</b>"
+msgstr "<b>Fitxategia:</b>"
 
 #: ../src/gtk/fm-file-properties.c:1307
 msgid "Multiple Files"
@@ -878,9 +860,8 @@ msgid "Folder"
 msgstr "Karpeta"
 
 #: ../src/gtk/fm-folder-view.c:183
-#, fuzzy
 msgid "Empty File"
-msgstr "Exekutatu fitxategia"
+msgstr "Fitxategi hutsa"
 
 #: ../src/gtk/fm-folder-view.c:195
 msgid "_Invert Selection"
@@ -891,9 +872,8 @@ msgid "_Sort Files"
 msgstr "_Ordenatu fitxategiak"
 
 #: ../src/gtk/fm-folder-view.c:197
-#, fuzzy
 msgid "_Rename Folder"
-msgstr "Berrizendatu fitxategia"
+msgstr "_Berrizendatu karpeta"
 
 #: ../src/gtk/fm-folder-view.c:198
 #, fuzzy
@@ -1071,14 +1051,12 @@ msgid "Applications"
 msgstr "Aplikazioak"
 
 #: ../src/gtk/fm-places-model.c:805 ../src/gtk/fm-places-model.c:983
-#, fuzzy
 msgid "File system"
-msgstr "Fitxategi-_mota"
+msgstr "Fitxategi-sistema"
 
 #: ../src/gtk/fm-places-model.c:822 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Computer"
-msgstr "Nire ordenagailua"
+msgstr "Ordenagailua"
 
 #: ../src/gtk/fm-places-model.c:840 ../src/gtk/fm-places-model.c:1005
 #, fuzzy
@@ -1098,9 +1076,8 @@ msgid "_Eject Removable Media"
 msgstr "_Egotzi gailu aldagarria"
 
 #: ../src/gtk/fm-places-view.c:127
-#, fuzzy
 msgid "_Format Volume"
-msgstr "_Muntatu bolumena"
+msgstr "_Formateatu bolumena"
 
 #: ../src/gtk/fm-places-view.c:143
 msgid "_Rename Bookmark Item"
@@ -1254,36 +1231,36 @@ msgstr ""
 #: ../src/gtk/fm-standard-view.c:790
 #, c-format
 msgid "_Hide %s"
-msgstr ""
+msgstr "E_zkutatu %s"
 
 #: ../src/gtk/fm-standard-view.c:798
 msgid "_Move left"
-msgstr ""
+msgstr "Eraman e_zkerrera"
 
 #: ../src/gtk/fm-standard-view.c:804
 msgid "Move _right"
-msgstr ""
+msgstr "Eraman e_skuinera"
 
 #: ../src/gtk/fm-standard-view.c:827
 #, c-format
 msgid "Show %s"
-msgstr ""
+msgstr "Erakutsi %s"
 
 #: ../src/gtk/fm-standard-view.c:839
 msgid "_Forget width"
-msgstr ""
+msgstr "_Ahaztu zabalera"
 
 #: ../src/gtk/fm-standard-view.c:1776
 msgid "_Icon View"
-msgstr ""
+msgstr "_Ikono ikuspegia"
 
 #: ../src/gtk/fm-standard-view.c:1777
 msgid "_Compact View"
-msgstr ""
+msgstr "Ikuspegi _trinkoa"
 
 #: ../src/gtk/fm-standard-view.c:1778
 msgid "_Thumbnail View"
-msgstr ""
+msgstr "_Koadro txikien ikuspegia"
 
 #: ../src/gtk/fm-standard-view.c:1779
 msgid "Detailed _List View"
@@ -1356,12 +1333,12 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:568 ../src/modules/vfs-menu.c:682
 #, c-format
 msgid "Cannot create XML definition for '%s'"
-msgstr ""
+msgstr "Ezin da '%s'(r)entzako XML definizioa sortu"
 
 #: ../src/modules/vfs-menu.c:449 ../src/modules/vfs-menu.c:2667
 #, c-format
 msgid "Menu path '%s' already exists"
-msgstr ""
+msgstr "'%s' menu-bidea dagoeneko existitzen da"
 
 #: ../src/modules/vfs-menu.c:1129 ../src/modules/vfs-menu.c:1434
 #: ../src/modules/vfs-menu.c:1521
@@ -1379,7 +1356,7 @@ msgstr "Menu-direktorio baliogabea"
 
 #: ../src/modules/vfs-menu.c:1458 ../src/modules/vfs-menu.c:1737
 msgid "Menu item name cannot be empty"
-msgstr ""
+msgstr "Menuko elementuaren izena ezin da hutsik utzi"
 
 #: ../src/modules/vfs-menu.c:1508
 #, fuzzy, c-format
@@ -1416,9 +1393,9 @@ msgid "The '%s' is a menu directory"
 msgstr "Menu-direktorio baliogabea"
 
 #: ../src/modules/vfs-menu.c:2029 ../src/modules/vfs-menu.c:2660
-#, fuzzy, c-format
+#, c-format
 msgid "The '%s' isn't a menu item"
-msgstr "Menu-direktorio baliogabea"
+msgstr "'%s' ez da menuko elementu bat"
 
 #: ../src/modules/vfs-menu.c:2053
 #, c-format
@@ -1426,9 +1403,9 @@ msgid "The '%s' entry file is broken"
 msgstr ""
 
 #: ../src/modules/vfs-menu.c:2339 ../src/modules/vfs-menu.c:2431
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot create menu item '%s'"
-msgstr "Fitxategi-izen baliogabea: %s"
+msgstr "Ezin da '%s' menuko elementua sortu"
 
 #: ../src/modules/vfs-menu.c:2575
 msgid "Name of menu directory should not end with \".desktop\""
@@ -1440,7 +1417,7 @@ msgstr ""
 
 #: ../src/modules/vfs-menu.c:2709
 msgid "Invalid destination"
-msgstr ""
+msgstr "Helburu baliogabea"
 
 #: ../src/modules/vfs-menu.c:2982
 #, c-format
@@ -1453,13 +1430,12 @@ msgid "Search"
 msgstr "Bilatu"
 
 #: ../src/modules/vfs-search.c:1049
-#, fuzzy
 msgid "Search results"
-msgstr "Bilatu fitxategiak"
+msgstr "Bilaketaren emaitzak"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
 msgid "Choose an executable file"
-msgstr ""
+msgstr "Aukeratu fitxategi exekutagarri bat"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:72
 #, fuzzy
@@ -1482,23 +1458,21 @@ msgstr ""
 
 #. row 1: "Terminal" GtkCheckButton
 #: ../src/modules/gtk-fileprop-x-desktop.c:294
-#, fuzzy
 msgid "_Run in terminal emulator"
 msgstr "_Exekutatu terminal-emuladorean"
 
 #. row 2: "X-KeepTerminal" GtkCheckButton
 #: ../src/modules/gtk-fileprop-x-desktop.c:306
 msgid "_Keep terminal window open after run"
-msgstr ""
+msgstr "_Mantendu terminalaren leihoa irekita exekutatu ondoren"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:322
-#, fuzzy
 msgid "<b>D_escription:</b>"
-msgstr "<b>Kokapena:</b>"
+msgstr "<b>D_eskribapena:</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:332
 msgid "Generic name of the application"
-msgstr ""
+msgstr "Aplikazioaren izen generikoa"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:340
 #, fuzzy
@@ -1526,9 +1500,8 @@ msgid "_Use startup notification"
 msgstr ""
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop entry"
-msgstr "Mahaigaina"
+msgstr "_Mahaigaineko sarrera"
 
 #: ../src/modules/gtk-menu-trash.c:72
 msgid "_Restore"
@@ -1544,7 +1517,7 @@ msgstr ""
 
 #: ../src/tools/lxshortcut.c:42
 msgid "SOURCE"
-msgstr ""
+msgstr "ITURBURUA"
 
 #: ../src/tools/lxshortcut.c:43
 msgid "result file name"
@@ -1552,7 +1525,7 @@ msgstr ""
 
 #: ../src/tools/lxshortcut.c:43
 msgid "RESULT"
-msgstr ""
+msgstr "EMAITZA"
 
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
