Don't use dummy monitors if FmFileOpsJob but signal FmFolder directly.
Since we already have internal APIs to tell FmFolder that some files were
added/removed there, we can remove that terrible code with monitors.

This allows inform any folder instantly about our file operations so user
will see changes as soon copy/move/trash/delete/link operation is complete.

--- a/NEWS
+++ b/NEWS
@@ -317,6 +317,9 @@ Changes on 1.2.0 since 1.1.0:
     is "/usr/lib/gnome-disk-utility/gdu-format-tool -d", that will call
     well known component of Gnome Disk Utility.
 
+* Implemented internal workaround for GIO inotify delay - operations with
+    files are reflected in view instantly now, without delay of 1 second.
+
 * A whole lot of bugfixes.
 
 
